--- a/scss/components/navigation/_navbar-top-links.scss
+++ b/scss/components/navigation/_navbar-top-links.scss
@@ -1,5 +1,5 @@
 .navbar-top-links {
-  @media (min-width: $break-lg-phone) {  
+  @media (min-width: $break-768) {  
     display: flex;
     align-items: center;
     flex-grow: 1;
