--- a/scss/components/navigation/_sidebar.scss
+++ b/scss/components/navigation/_sidebar.scss
@@ -47,7 +47,7 @@
     padding-left: 52px;
   }
 
-  @media (min-width: $break-lg-phone) {
+  @media (min-width: $break-768) {
 
     z-index: 1;
     position: absolute;
