--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -82,7 +82,7 @@
 @mixin panel-bg-contain {
   background-repeat: no-repeat;
   background-size: cover; // > 667
-  @media (min-width: $break-ml-phone) {
+  @media (min-width: $break-640) {
     background-size: contain;
   }
 }
@@ -242,7 +242,7 @@
     max-height: 2em;
     max-width: 2em;
   } // > 640
-  @media (min-width: $break-ml-phone) {
+  @media (min-width: $break-640) {
     .title {
       margin-bottom: .9rem;
     }
