--- a/css/styles.css
+++ b/css/styles.css
@@ -78,55 +78,58 @@
         .grid-4-col {
           grid-template-columns: repeat(auto-fit, minmax(25em, 1fr)); } } }
 
-.circle-mask {
-  border-radius: 50%;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-  max-height: 25rem;
-  max-width: 25rem; }
-  .circle-mask img {
-    border-radius: 50%; }
-  .circle-mask figcaption {
-    display: none; }
-  .circle-mask.mask-outside {
-    shape-outside: circle(); }
+@media (min-width: 40em) {
+  .circle-mask {
+    border-radius: 50%;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    max-height: 25rem;
+    max-width: 25rem; }
+    .circle-mask img {
+      border-radius: 50%; }
+    .circle-mask figcaption {
+      display: none; }
+    .circle-mask.mask-outside {
+      shape-outside: circle(); } }
 
-.circle-mask-md {
-  border-radius: 50%;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-  max-height: 25rem;
-  max-width: 25rem;
-  max-height: 20rem;
-  max-width: 20rem; }
-  .circle-mask-md img {
-    border-radius: 50%; }
-  .circle-mask-md figcaption {
-    display: none; }
-  .circle-mask-md.mask-outside {
-    shape-outside: circle(); }
+@media (min-width: 40em) {
+  .circle-mask-md {
+    border-radius: 50%;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    max-height: 25rem;
+    max-width: 25rem;
+    max-height: 20rem;
+    max-width: 20rem; }
+    .circle-mask-md img {
+      border-radius: 50%; }
+    .circle-mask-md figcaption {
+      display: none; }
+    .circle-mask-md.mask-outside {
+      shape-outside: circle(); } }
 
-.circle-mask-sm {
-  border-radius: 50%;
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-  max-height: 25rem;
-  max-width: 25rem;
-  max-height: 10rem;
-  max-width: 10rem; }
-  .circle-mask-sm img {
-    border-radius: 50%; }
-  .circle-mask-sm figcaption {
-    display: none; }
-  .circle-mask-sm.mask-outside {
-    shape-outside: circle(); }
+@media (min-width: 40em) {
+  .circle-mask-sm {
+    border-radius: 50%;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    max-height: 25rem;
+    max-width: 25rem;
+    max-height: 10rem;
+    max-width: 10rem; }
+    .circle-mask-sm img {
+      border-radius: 50%; }
+    .circle-mask-sm figcaption {
+      display: none; }
+    .circle-mask-sm.mask-outside {
+      shape-outside: circle(); } }
 
 .rounded-mask {
   border-radius: 1rem;
-  width: 100%;
+  max-width: 100%;
   overflow: hidden; }
   .rounded-mask img {
     border-radius: 1rem; }
@@ -384,6 +387,9 @@ ul li, ol li {
   max-width: 85em;
   width: 100%; }
 
+.display-4 {
+  font-size: 3.125em; }
+
 :root:not(.enhanced):before {
   content: "Please enable JavaScript for a better user experience. Thank you!";
   color: #FFF;
@@ -441,6 +447,10 @@ img {
 
 .row {
   width: 100%; }
+  @media (max-width: 40em) {
+    .row {
+      margin-right: auto;
+      margin-left: auto; } }
 
 #main {
   display: flex;
@@ -460,7 +470,7 @@ img {
     align-self: stretch;
     padding-top: 4em; } }
 
-@media (min-width: 62em) {
+@media (min-width: 61.25em) {
   .content-page .card-row .media-item {
     padding-top: 0; } }
 
@@ -690,7 +700,7 @@ input[type="button"].btn-block {
   font-size: 1.25rem; }
 
 .btn-xl {
-  font-size: 1.5em;
+  font-size: 1.75em;
   padding-top: 1em;
   padding-bottom: 1em;
   padding-right: 2em;
@@ -727,11 +737,14 @@ input[type="button"].btn-block {
     width: 100%; }
 
 .media-item {
-  margin: 0 auto 2rem; }
+  margin-top: 2rem;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 2rem; }
   .media-item figcaption {
     padding-top: .625em;
     padding-left: .625em; }
-  @media (min-width: 48em) {
+  @media (min-width: 40em) {
     .media-item.float-l {
       margin: .5rem 2.5rem 2.5rem 0; }
     .media-item.float-r {
@@ -1023,7 +1036,7 @@ input[type="button"].btn-block {
 .navbar-inverse .navbar-nav .nav-link {
   color: #DDD; }
 
-@media (min-width: 62em) {
+@media (min-width: 61.25em) {
   .nav-item {
     margin-left: 1rem; } }
 
@@ -1138,7 +1151,7 @@ input[type="button"].btn-block {
     color: #FCFCFC;
     padding: 1em;
     opacity: 0.5;
-    font-size: 2.5em;
+    font-size: 3.125em;
     text-shadow: none;
     position: absolute;
     top: 0;
@@ -1267,13 +1280,23 @@ input[type="button"].btn-block {
           margin-right: 0; } }
 
 .page-content > .container {
-  padding-top: 2em;
+  padding-top: 5em;
   padding-bottom: 2em;
   padding-right: 2em;
   padding-left: 2em; }
   .page-content > .container > .btn {
     margin-top: 1rem;
     margin-bottom: 2rem; }
+
+.page-content .row {
+  margin-right: auto;
+  margin-left: auto; }
+
+@media (max-width: 40em) {
+  .page-content .media-item {
+    float: none;
+    padding: 0;
+    max-width: 100%; } }
 
 @media (min-width: 48em) {
   .page-content {
@@ -1286,6 +1309,21 @@ input[type="button"].btn-block {
       padding-bottom: 0;
       padding-right: 4em;
       padding-left: 4em; } }
+
+@media (max-width: 29.99em) {
+  .content-row-sm [class*="pr-"] {
+    padding-right: 0;
+    padding-left: 0; } }
+
+@media (max-width: 47.99em) {
+  .content-row-md [class*="pr-"] {
+    padding-right: 0;
+    padding-left: 0; } }
+
+@media (max-width: 56.24em) {
+  .content-row-lg [class*="pr-"] {
+    padding-right: 0;
+    padding-left: 0; } }
 
 .MontserratLight {
   -webkit-font-smoothing: auto;
@@ -1332,10 +1370,10 @@ input[type="button"].btn-block {
   font-size: 1.25em; }
 
 .text-lg {
-  font-size: 1.5em; }
+  font-size: 1.75em; }
 
 .text-xl {
-  font-size: 2.5em; }
+  font-size: 3.125em; }
 
 .all-caps {
   text-transform: uppercase; }
@@ -1867,7 +1905,7 @@ input[type="button"].btn-block {
     .bg-hero {
       height: 50vh; } }
   .bg-hero .h1, .bg-hero h1 {
-    font-size: 2.5em;
+    font-size: 3.125em;
     margin-bottom: .625rem; }
   .bg-hero p {
     max-width: 40em;
