--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -102,11 +102,11 @@ a abbr[title] {
   #portfolio-home & {
     max-width: 30em;
   } // > 540
-  @media (min-width: $break-md-phone) {
+  @media (min-width: $break-540) {
     margin-bottom: 2em;
     max-width: 40em;
   } // > 1200
-  @media (min-width: $break-lg-screen) {
+  @media (min-width: $break-1200) {
     max-width: 100%;
   }
 }
@@ -166,4 +166,10 @@ ul, ol {
   @include mr-ml-a;
   max-width: 85em;
   width: 100%;
+}
+
+// display
+
+.display-4 {
+  @include text-xl;
 }
