--- a/scss/utilities/mixins/_flexbox.scss
+++ b/scss/utilities/mixins/_flexbox.scss
@@ -68,7 +68,7 @@
 
 @mixin flex-sm {
   // > 540
-  @media (min-width: $break-md-phone) {
+  @media (min-width: $break-540) {
 		flex-grow: 0;
     width: auto;
   } 
@@ -171,7 +171,7 @@
 
 @mixin flex-sm {
   // > 540
-  @media (min-width: $break-md-phone) {
+  @media (min-width: $break-540) {
     flex-grow: 0;
     width: auto;
   }
