--- a/scss/utilities/mixins/_text.scss
+++ b/scss/utilities/mixins/_text.scss
@@ -28,7 +28,7 @@
 // align right
 @mixin align-right {
   // > 540
-  @media (min-width: $break-md-phone) {
+  @media (min-width: $break-540) {
     text-align: right;
     *+*:last-child {
       margin-right: 0;
@@ -39,7 +39,7 @@
 // align center
 @mixin align-center {
   // > 540
-  @media (min-width: $break-md-phone) {
+  @media (min-width: $break-540) {
     text-align: center;
   }
 }
@@ -66,11 +66,11 @@
 }
 
 @mixin text-lg {
-  font-size: 1.5em;
+  font-size: 1.75em;
 }
 
 @mixin text-xl {
-  font-size: 2.5em;
+  font-size: 3.125em;
 }
 
 //** FONT STYLES **//
