--- a/css/modifiers.css
+++ b/css/modifiers.css
@@ -81,14 +81,16 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
-    max-height: 25rem;
-    max-width: 25rem; }
-    .circle-mask img {
-      border-radius: 50%; }
+    max-height: 20rem;
+    max-width: 20rem; }
     .circle-mask figcaption {
       display: none; }
     .circle-mask.mask-outside {
       shape-outside: circle(); } }
+  @media (min-width: 40em) and (min-width: 56.25em) {
+    .circle-mask {
+      max-height: 25rem;
+      max-width: 25rem; } }
 
 @media (min-width: 40em) {
   .circle-mask-md {
@@ -96,16 +98,18 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
-    max-height: 25rem;
-    max-width: 25rem;
+    max-height: 20rem;
+    max-width: 20rem;
     max-height: 20rem;
     max-width: 20rem; }
-    .circle-mask-md img {
-      border-radius: 50%; }
     .circle-mask-md figcaption {
       display: none; }
     .circle-mask-md.mask-outside {
       shape-outside: circle(); } }
+  @media (min-width: 40em) and (min-width: 56.25em) {
+    .circle-mask-md {
+      max-height: 25rem;
+      max-width: 25rem; } }
 
 @media (min-width: 40em) {
   .circle-mask-sm {
@@ -113,16 +117,18 @@
     height: 100%;
     width: 100%;
     overflow: hidden;
-    max-height: 25rem;
-    max-width: 25rem;
+    max-height: 20rem;
+    max-width: 20rem;
     max-height: 10rem;
     max-width: 10rem; }
-    .circle-mask-sm img {
-      border-radius: 50%; }
     .circle-mask-sm figcaption {
       display: none; }
     .circle-mask-sm.mask-outside {
       shape-outside: circle(); } }
+  @media (min-width: 40em) and (min-width: 56.25em) {
+    .circle-mask-sm {
+      max-height: 25rem;
+      max-width: 25rem; } }
 
 .rounded-mask {
   border-radius: 1rem;
