--- a/scss/elements/_media-item.scss
+++ b/scss/elements/_media-item.scss
@@ -82,4 +82,9 @@
 
 .media-item {
   @include media-item;
+  &.mobile-crm {
+    @media (min-width: $break-800) {
+      @include mw-20em;
+    }
+  }
 }
