lists mixins & styles, Offerings content design

--- a/css/modifiers.css
+++ b/css/modifiers.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "Montserrat Light";
   src: url("../fonts/montserrat-300.woff2") format("woff2"), url("../fonts/montserrat-300.woff") format("woff");
@@ -285,37 +286,75 @@
 .bold {
   font-weight: 700; }
 
+.list-title {
+  margin-left: -1rem; }
+
+ul, ol {
+  padding-left: 1.5em; }
+  ul li, ol li {
+    margin-bottom: .625rem; }
+    ul li:last-child, ol li:last-child {
+      margin-bottom: 0; }
+  ul.list-styled, ol.list-styled {
+    -webkit-font-smoothing: auto;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
+    .fonts-loaded ul.list-styled, .fonts-loaded ol.list-styled {
+      font-family: "Montserrat Light", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      font-weight: 300; }
+  ul.list-unstyled, ol.list-unstyled {
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
+    ul.list-unstyled ul, ol.list-unstyled ul {
+      font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      margin-bottom: 0;
+      padding-top: 1em;
+      padding-bottom: 1em; }
+      ul.list-unstyled ul li:last-child, ol.list-unstyled ul li:last-child {
+        margin-bottom: 0; }
+  ul.no-bullet li, ol.no-bullet li {
+    list-style-type: none; }
+  ul.arrow-list-lg, ol.arrow-list-lg {
+    padding: 0; }
+    ul.arrow-list-lg li, ol.arrow-list-lg li {
+      display: flex; }
+      ul.arrow-list-lg li li, ol.arrow-list-lg li li {
+        list-style-type: none; }
+      ul.arrow-list-lg li:before, ol.arrow-list-lg li:before {
+        color: #F6BE1E;
+        content: "→ ";
+        padding-right: .625em; }
+
 .flex-layout {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -.25em;
-  margin-left: -.25em; }
+  margin-right: -1em;
+  margin-left: -1em; }
   .flex-layout > * {
-    padding: 0 .25em .5em; }
+    padding: 1em; }
 
 .flex-layout-grid {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -.25em;
-  margin-left: -.25em; }
+  margin-right: -1em;
+  margin-left: -1em; }
   .flex-layout-grid > * {
-    padding: 0 .25em .5em; }
+    padding: 1em; }
   .flex-layout-grid > * {
     flex-grow: 1;
     flex-shrink: 0; }
 
-.flex-3-col {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -.25em;
-  margin-left: -.25em; }
-  .flex-3-col > * {
-    padding: 0 .25em .5em; }
-  .flex-3-col > * {
-    flex-grow: 1;
-    flex-shrink: 0; }
-  .flex-3-col > * {
-    flex-basis: 11em; }
+@media (min-width: 56.25em) {
+  .flex-3-col {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -1em;
+    margin-left: -1em; }
+    .flex-3-col > * {
+      padding: 1em; }
+    .flex-3-col > * {
+      flex-grow: 1;
+      flex-shrink: 0; }
+    .flex-3-col > * {
+      flex-basis: 11em; } }
 
 .flex {
   display: flex; }
