--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "Montserrat Light";
   src: url("../fonts/montserrat-300.woff2") format("woff2"), url("../fonts/montserrat-300.woff") format("woff");
@@ -345,34 +346,6 @@ a abbr[title] {
   color: hotpink;
   font-size: 1rem;
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
-
-.list-title {
-  margin-left: -1rem; }
-
-ul.list-styled, ol.list-styled {
-  -webkit-font-smoothing: auto;
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
-  .fonts-loaded ul.list-styled, .fonts-loaded ol.list-styled {
-    font-family: "Montserrat Light", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    font-weight: 300; }
-
-ul.list-unstyled, ol.list-unstyled {
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
-  ul.list-unstyled ul, ol.list-unstyled ul {
-    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    margin-bottom: 0;
-    padding-top: 1em;
-    padding-bottom: 1em; }
-    ul.list-unstyled ul li:last-child, ol.list-unstyled ul li:last-child {
-      margin-bottom: 0; }
-
-ul.no-bullet, ol.no-bullet {
-  list-style-type: none; }
-
-ul li, ol li {
-  margin-bottom: .625rem; }
-  ul li:last-child, ol li:last-child {
-    margin-bottom: 0; }
 
 .border-title {
   border-bottom: 1px solid #DDD;
@@ -872,11 +845,11 @@ input[type="button"].btn-block {
 .form-row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -.25em;
-  margin-left: -.25em;
+  margin-right: -1em;
+  margin-left: -1em;
   align-items: center; }
   .form-row > * {
-    padding: 0 .25em .5em; }
+    padding: 1em; }
   .form-row > * {
     display: flex;
     align-items: flex-end;
@@ -1364,65 +1337,6 @@ input[type="button"].btn-block {
     padding-right: 0;
     padding-left: 0; } }
 
-.MontserratLight {
-  -webkit-font-smoothing: auto;
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
-  .fonts-loaded .MontserratLight {
-    font-family: "Montserrat Light", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    font-weight: 300; }
-
-.Montserrat {
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
-  .fonts-loaded .Montserrat {
-    font-family: "Montserrat", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    font-weight: 500; }
-
-.MontserratBold {
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
-  .fonts-loaded .MontserratBold {
-    font-family: "Montserrat Bold", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-    font-weight: 700; }
-
-@media (min-width: 33.75em) {
-  .align-right {
-    text-align: right; }
-    .align-right * + *:last-child {
-      margin-right: 0; } }
-
-@media (min-width: 33.75em) {
-  .align-center {
-    text-align: center; } }
-
-.text-center {
-  text-align: center; }
-
-.text-tiny {
-  font-size: 80%; }
-
-.text-sm {
-  font-size: .875em; }
-
-.text-base {
-  font-size: 1em; }
-
-.text-md {
-  font-size: 1.25em; }
-
-.text-lg {
-  font-size: 1.75em; }
-
-.text-xl {
-  font-size: 3.125em; }
-
-.all-caps {
-  text-transform: uppercase; }
-
-.italic {
-  font-style: italic; }
-
-.bold {
-  font-weight: 700; }
-
 .m-auto {
   margin: auto; }
 
@@ -1709,6 +1623,102 @@ input[type="button"].btn-block {
 .pl-4 {
   padding-left: 4em; }
 
+.MontserratLight {
+  -webkit-font-smoothing: auto;
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
+  .fonts-loaded .MontserratLight {
+    font-family: "Montserrat Light", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-weight: 300; }
+
+.Montserrat {
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
+  .fonts-loaded .Montserrat {
+    font-family: "Montserrat", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-weight: 500; }
+
+.MontserratBold {
+  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
+  .fonts-loaded .MontserratBold {
+    font-family: "Montserrat Bold", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    font-weight: 700; }
+
+@media (min-width: 33.75em) {
+  .align-right {
+    text-align: right; }
+    .align-right * + *:last-child {
+      margin-right: 0; } }
+
+@media (min-width: 33.75em) {
+  .align-center {
+    text-align: center; } }
+
+.text-center {
+  text-align: center; }
+
+.text-tiny {
+  font-size: 80%; }
+
+.text-sm {
+  font-size: .875em; }
+
+.text-base {
+  font-size: 1em; }
+
+.text-md {
+  font-size: 1.25em; }
+
+.text-lg {
+  font-size: 1.75em; }
+
+.text-xl {
+  font-size: 3.125em; }
+
+.all-caps {
+  text-transform: uppercase; }
+
+.italic {
+  font-style: italic; }
+
+.bold {
+  font-weight: 700; }
+
+.list-title {
+  margin-left: -1rem; }
+
+ul, ol {
+  padding-left: 1.5em; }
+  ul li, ol li {
+    margin-bottom: .625rem; }
+    ul li:last-child, ol li:last-child {
+      margin-bottom: 0; }
+  ul.list-styled, ol.list-styled {
+    -webkit-font-smoothing: auto;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
+    .fonts-loaded ul.list-styled, .fonts-loaded ol.list-styled {
+      font-family: "Montserrat Light", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      font-weight: 300; }
+  ul.list-unstyled, ol.list-unstyled {
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; }
+    ul.list-unstyled ul, ol.list-unstyled ul {
+      font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      margin-bottom: 0;
+      padding-top: 1em;
+      padding-bottom: 1em; }
+      ul.list-unstyled ul li:last-child, ol.list-unstyled ul li:last-child {
+        margin-bottom: 0; }
+  ul.no-bullet li, ol.no-bullet li {
+    list-style-type: none; }
+  ul.arrow-list-lg, ol.arrow-list-lg {
+    padding: 0; }
+    ul.arrow-list-lg li, ol.arrow-list-lg li {
+      display: flex; }
+      ul.arrow-list-lg li li, ol.arrow-list-lg li li {
+        list-style-type: none; }
+      ul.arrow-list-lg li:before, ol.arrow-list-lg li:before {
+        color: #F6BE1E;
+        content: "→ ";
+        padding-right: .625em; }
+
 .show,
 .block {
   display: block; }
@@ -1994,34 +2004,35 @@ input[type="button"].btn-block {
 .flex-layout {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -.25em;
-  margin-left: -.25em; }
+  margin-right: -1em;
+  margin-left: -1em; }
   .flex-layout > * {
-    padding: 0 .25em .5em; }
+    padding: 1em; }
 
 .flex-layout-grid {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -.25em;
-  margin-left: -.25em; }
+  margin-right: -1em;
+  margin-left: -1em; }
   .flex-layout-grid > * {
-    padding: 0 .25em .5em; }
+    padding: 1em; }
   .flex-layout-grid > * {
     flex-grow: 1;
     flex-shrink: 0; }
 
-.flex-3-col {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: -.25em;
-  margin-left: -.25em; }
-  .flex-3-col > * {
-    padding: 0 .25em .5em; }
-  .flex-3-col > * {
-    flex-grow: 1;
-    flex-shrink: 0; }
-  .flex-3-col > * {
-    flex-basis: 11em; }
+@media (min-width: 56.25em) {
+  .flex-3-col {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -1em;
+    margin-left: -1em; }
+    .flex-3-col > * {
+      padding: 1em; }
+    .flex-3-col > * {
+      flex-grow: 1;
+      flex-shrink: 0; }
+    .flex-3-col > * {
+      flex-basis: 11em; } }
 
 .flex {
   display: flex; }
