--- a/scss/utilities/modifiers/_mod-text.scss
+++ b/scss/utilities/modifiers/_mod-text.scss
@@ -66,7 +66,8 @@
 //** LIST STYLES **//
 
 .list-title {
-  margin-left: -1rem;
+  @include mb-1;
+ // margin-left: -1rem;
 }
 
 ul, ol {
@@ -95,4 +96,15 @@ ul, ol {
     @include list-unstyled;
   }
 
+  ul.list-nested {
+    @include list-nested;
+    li {
+      
+    }
+  }
+
+}
+
+.list-parent {
+  @include list-parent;
 }
