--- a/css/styles.css
+++ b/css/styles.css
@@ -1035,6 +1035,8 @@ input[type="button"].btn-block {
 .navbar-brand {
   display: flex;
   align-items: center;
+  height: 100%;
+  max-height: 4em;
   max-width: 12rem;
   width: 100%; }
   .navbar-brand svg {
