--- a/scss/components/navigation/_navigation.scss
+++ b/scss/components/navigation/_navigation.scss
@@ -153,6 +153,8 @@ $box-size: 40px;
 .navbar-brand {
   @include flex;
   @include ai-center;
+  height: 100%;
+  max-height: 4em;
   max-width: 12rem;
   @include w-100;
   svg {
