--- a/css/styles.css
+++ b/css/styles.css
@@ -414,8 +414,7 @@ body {
   background-color: #f9f9f9; }
 
 img {
-  max-width: 100%;
-  width: 100%; }
+  max-width: 100%; }
 
 .site-wrapper {
   display: flex;
@@ -1035,8 +1034,7 @@ input[type="button"].btn-block {
 .navbar-brand {
   display: flex;
   align-items: center;
-  height: 100%;
-  max-height: 4em;
+  height: 4em;
   max-width: 12rem;
   width: 100%; }
   .navbar-brand svg {
@@ -1085,7 +1083,8 @@ input[type="button"].btn-block {
     font-size: 1.25em; }
 
 .card .media-item {
-  margin-top: 0; }
+  margin-top: 0;
+  overflow: hidden; }
   .feature .card .media-item {
     margin-bottom: 0; }
 
@@ -1117,8 +1116,6 @@ input[type="button"].btn-block {
       width: 35%; }
     .card-row .media-item {
       display: flex;
-      flex-direction: column;
-      align-items: flex-end;
       width: 40%; }
     .card-row .card-text + .card-text {
       margin-bottom: 20%; }
