--- a/scss/utilities/mixins/_backgrounds.scss
+++ b/scss/utilities/mixins/_backgrounds.scss
@@ -75,7 +75,7 @@
   }
 
   // > 800px
-  @media (min-width: 50em) {
+  @media (min-width: 50em) and (min-height: 30em) {
     @include h-100vh;
   }
 
