--- a/css/styles.css
+++ b/css/styles.css
@@ -2011,7 +2011,7 @@ ul, ol {
       height: auto;
       padding-top: 5em;
       padding-bottom: 5em; } }
-  @media (min-width: 50em) {
+  @media (min-width: 50em) and (min-height: 30em) {
     .bg-hero {
       height: 100vh; } }
   .bg-hero-globe {
