--- a/css/styles.css
+++ b/css/styles.css
@@ -950,8 +950,9 @@ input[type="button"].btn-block {
   font-weight: normal;
   letter-spacing: .02em;
   text-transform: uppercase;
-  top: .25em;
-  right: 0;
+  height: 100%;
+  top: 5px;
+  right: 5px;
   padding: 0; }
   .navbar-toggler:focus {
     outline: none; }
@@ -964,17 +965,20 @@ input[type="button"].btn-block {
     width: 1.75em;
     margin-right: 0;
     margin-left: 0;
-    top: 0; }
+    top: -5px; }
   .navbar-toggler[aria-expanded=true] {
     background-color: #EEE; }
   .navbar-toggler.no-script {
     z-index: 1; }
 
 .toggle-button {
+  border-radius: 50%;
   cursor: pointer;
   padding: 0;
-  height: 42px;
-  width: 56px; }
+  height: 100%;
+  width: 100%;
+  max-height: 2em;
+  max-width: 2em; }
   .toggle-button .nav-icon,
   .toggle-button .nav-icon:before,
   .toggle-button .nav-icon:after {
@@ -1009,12 +1013,12 @@ input[type="button"].btn-block {
     .toggle-button .nav-icon:hover, .toggle-button .nav-icon:focus {
       will-change: transform scale; }
   .toggle-button[aria-expanded=true] {
-    background: rgba(0, 0, 0, 0.3); }
+    background: #333; }
     .toggle-button[aria-expanded=true] .nav-icon {
       background-color: transparent;
       transform: scale(0.7);
       height: 4px;
-      width: 60%;
+      width: 65%;
       position: absolute; }
       .toggle-button[aria-expanded=true] .nav-icon span, .toggle-button[aria-expanded=true] .nav-icon .icon {
         opacity: 0; }
@@ -1034,7 +1038,9 @@ input[type="button"].btn-block {
 .navbar-brand {
   display: flex;
   align-items: center;
-  height: 4em;
+  flex-shrink: 0;
+  height: 100%;
+  max-height: 4em;
   max-width: 12rem;
   width: 100%; }
   .navbar-brand svg {
