--- a/css/styles.css
+++ b/css/styles.css
@@ -1041,7 +1041,7 @@ input[type="button"].btn-block {
   flex-shrink: 0;
   height: 100%;
   max-height: 4em;
-  max-width: 12rem;
+  max-width: 9.5em;
   width: 100%; }
   .navbar-brand svg {
     flex-grow: 1; }
@@ -2012,10 +2012,10 @@ ul, ol {
     font-size: .875em; }
   .bg-hero .icon {
     font-size: 1em; }
-  @media (max-height: 33.75em) {
+  @media (max-height: 40em) {
     .bg-hero {
       height: auto;
-      padding-top: 5em;
+      padding-top: 7.5em;
       padding-bottom: 5em; } }
   @media (min-width: 50em) and (min-height: 30em) {
     .bg-hero {
