--- a/scss/components/navigation/_navigation.scss
+++ b/scss/components/navigation/_navigation.scss
@@ -161,7 +161,7 @@ $box-size: 40px;
   flex-shrink: 0;
   height: 100%;
   max-height: 4em;
-  max-width: 12rem;
+  max-width: 9.5em;
   @include w-100;
   svg {
     @include flex-grow-1;
