Revert "IE banner fix"
This reverts commit 57267967c4a8f4548f3bd8c884965429cefd0c59.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1044,11 +1044,7 @@ input[type="button"].btn-block {
   max-width: 9.5em;
   width: 100%; }
   .navbar-brand svg {
-    flex-grow: 1;
-    height: 100%;
-    max-height: 4em;
-    max-width: 9.5em;
-    width: 100%; }
+    flex-grow: 1; }
 
 .nav-list {
   font-size: .875em; }
