--- a/css/styles.css
+++ b/css/styles.css
@@ -1044,7 +1044,11 @@ input[type="button"].btn-block {
   max-width: 9.5em;
   width: 100%; }
   .navbar-brand svg {
-    flex-grow: 1; }
+    flex-grow: 1;
+    height: 100%;
+    max-height: 4em;
+    max-width: 9.5em;
+    width: 100%; }
 
 .nav-list {
   font-size: .875em; }
