--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -19,6 +19,8 @@ img {
   @include w-100;
   //height: 100vh;
   //box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
+  position: relative;
+  z-index: 1;
   @supports (grid-gap: 0) {
     height: 100vh;
     display: grid;
