IE 9 footer fix

--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -20,6 +20,7 @@
       box-shadow: none;
       height: auto;
       margin: 0;
+      width: auto;
     }
     button {
       // @include pr-tiny;
