--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -8,11 +8,16 @@
     @include text-sm;
   }
   .logo {
+    @include flex;
     flex-grow: 1;
     flex-basis: 15em;
     max-width: 15em;
     @include mb-2;
     @include pr-1;
+    img {
+      max-height: 4em;
+      max-width: 15em;
+    }
   }
   .search {
     @include mb-2;
