--- a/scss/components/_modals.scss
+++ b/scss/components/_modals.scss
@@ -55,8 +55,8 @@
 
 .modal-dialog {
   @include flex-grow-1;
-  @include mr-ml-a;
   max-width: 65em;
+  @include w-100;
 }
 
 .modal-backdrop.show {
